<resources>
    <string name="app_name">Brainy Buddies</string>
    <string name="welcome">Welcome to\nBrainy Buddies</string>
    <string name="des">Hey there! Get ready for an\nexciting quiz adventure. Let’s\nhave fun while learning new\nthings!</string>
    <string name="get_started">Get Started</string>
    <string name="des1">Learn And Play, Everyday!</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="score">High Score</string>
    <string name="welcome2">Welcome</string>
    <string name="name">Please Enter your name</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="sound">Sound</string>
    <string name="language">Language</string>
    <string name="support">Support</string>
    <string name="high_score">High Score</string>


</resources>