<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView

        android:id="@+id/imageView11"
        android:layout_width="410dp"
        android:layout_height="860dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="743dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="80sp"
            android:text="@string/des1"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="269dp"
            android:layout_height="64dp"
            android:layout_marginStart="85sp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="50sp"
            android:backgroundTint="@color/blue"
            android:text="@string/play"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:cornerRadius="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="269dp"
            android:layout_height="62dp"
            android:layout_marginLeft="85sp"
            android:layout_marginTop="30sp"
            android:backgroundTint="@color/blue"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:cornerRadius="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="271dp"
            android:layout_height="62dp"
            android:layout_marginLeft="85sp"
            android:layout_marginTop="30sp"
            android:backgroundTint="@color/blue"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:cornerRadius="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>