<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="410dp"
        android:layout_height="860dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="314dp"
            android:layout_height="326dp"
            android:layout_marginStart="55sp"
            android:layout_marginTop="200sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="200sp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="15sp"
            app:cardElevation="5sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35sp"
                    android:layout_marginTop="70sp"
                    android:layout_marginRight="35sp"
                    android:backgroundTint="@color/pink"
                    android:text="@string/sound"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35sp"
                    android:layout_marginTop="30sp"
                    android:layout_marginRight="35sp"
                    android:backgroundTint="@color/pink"
                    android:text="@string/language"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35sp"
                    android:layout_marginTop="30sp"
                    android:layout_marginRight="35sp"
                    android:backgroundTint="@color/pink"
                    android:text="@string/support"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>