<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaygameActivity">

    <ImageView

        android:id="@+id/imageView12"
        android:layout_width="410dp"
        android:layout_height="860dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="120sp"
            android:layout_marginRight="30sp"
            app:srcCompat="@drawable/name" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="316dp"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="230sp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="15sp"
            app:cardElevation="5sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120sp"
                    android:layout_marginTop="30sp"
                    android:layout_marginRight="100sp"
                    android:text="@string/welcome2"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="40sp"
                    android:allowUndo="true"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="40sp"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="Enter name"
                    android:inputType="text"
                    android:padding="12sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/material_dynamic_neutral_variant70" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40sp"
                    android:layout_marginTop="30sp"
                    android:layout_marginRight="30sp"
                    android:backgroundTint="@color/pink"
                    android:padding="10sp"
                    android:text="@string/start"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:cornerRadius="20sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>